--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
     "html-react-parser": "^3.0.8",
+    "jodit-react": "^1.3.32",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
