--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/extension-underline": "^2.0.0-beta.209",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "axios": "^1.3.1",
     "formik": "^2.2.9",
     "html-react-parser": "^3.0.8",
     "jodit-react": "^1.3.32",
@@ -32,7 +33,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
-    "zod": "^3.20.2"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
