--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jodit-react": "^1.3.32",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-input-mask": "^2.0.4",
