--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "jodit-react": "^1.3.32",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
     "react-input-mask": "^2.0.4",
     "react-redux": "^8.0.5",
