--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "slick-carousel": "^1.8.1",
+    "use-debounce": "^9.0.3",
     "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
