--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
     "axios": "^1.3.1",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "html-react-parser": "^3.0.8",
     "jodit-react": "^1.3.32",
