--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "use-debounce": "^9.0.3",
     "use-react-router-breadcrumbs": "^4.0.1",
