--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "slick-carousel": "^1.8.1",
     "use-debounce": "^9.0.3",
     "use-react-router-breadcrumbs": "^4.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
