--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
     "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.1.4",
     "react-payment-inputs": "^1.1.9",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
