--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "axios": "^1.3.1",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
-    "html-react-parser": "^3.0.8",
+    "framer-motion": "^10.9.1",
+    "html-react-parser": "^3.0.15",
     "jodit-react": "^1.3.32",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
